新增商务风窗体

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TitleBarStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TitleBarStyle.axaml
@@ -54,7 +54,10 @@
                                                 <ColumnDefinition Width="auto" />
                                             </Grid.ColumnDefinitions>
                                             <ContentPresenter Background="{x:Null}" Content="{TemplateBinding HeaderContent}" />
-                                            <Grid Name="PART_WindowButtonGrid" Grid.Column="1">
+                                            <Grid
+                                                Name="PART_WindowButtonGrid"
+                                                Grid.Column="1"
+                                                IsVisible="{TemplateBinding IsWindowToolsVisible}">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto" />
                                                     <ColumnDefinition Width="auto" />
