新增文件帮助类以及新增上传文件控件
新增辅助工具，如文件转字节等工具

--- a/src/LayuiAvaloniaPack/Code/Layui.Main/App.axaml
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/App.axaml
@@ -9,7 +9,7 @@
     </prism:PrismApplication.DataContext>
     <TrayIcon.Icons>
         <TrayIcons>
-            <TrayIcon Icon="avares://LayuiApp.Desktop/Assets/AvaloniaLogo.png" ToolTipText="欢迎使用LayUI-Avalonia组件库">
+            <TrayIcon Icon="avares://LayuiApp/Assets/AvaloniaLogo.png" ToolTipText="欢迎使用LayUI-Avalonia组件库">
                 <TrayIcon.Menu>
                     <NativeMenu>
                         <NativeMenuItem Command="{Binding ExitCommand}" Header="退出" />
