--- a/src/LayuiAvaloniaPack/Apps/BusinessApp.Desktop/MainWindow.axaml
+++ b/src/LayuiAvaloniaPack/Apps/BusinessApp.Desktop/MainWindow.axaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:temp="using:BusinessApp.Desktop.DataTemplateSelector"
     xmlns:vn="using:BusinessApp.Desktop"
     Title="BusinessApp.Desktop"
     d:DesignHeight="450"
@@ -125,18 +126,46 @@
                                     </ItemsControl.ItemsPanel>
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <Border
-                                                Height="150"
-                                                Margin="10"
-                                                Background="#252525"
-                                                BoxShadow="0 1 1 #000">
-                                                <TextBlock
-                                                    HorizontalAlignment="Center"
-                                                    VerticalAlignment="Center"
-                                                    FontSize="30"
-                                                    Foreground="White"
-                                                    Text="{Binding}" />
-                                            </Border>
+                                            <ContentControl Name="Item" Content="{Binding Type}">
+                                                <ContentControl.ContentTemplate>
+                                                    <temp:ColorDataTemplateSelector>
+                                                        <temp:ColorDataTemplateSelector.Blue_DataTemplate>
+                                                            <DataTemplate>
+                                                                <Border
+                                                                    Height="150"
+                                                                    Margin="10"
+                                                                    Background="{DynamicResource Blue}"
+                                                                    BoxShadow="0 1 1 #000"
+                                                                    DataContext="{Binding #Item.DataContext}">
+                                                                    <TextBlock
+                                                                        HorizontalAlignment="Center"
+                                                                        VerticalAlignment="Center"
+                                                                        FontSize="30"
+                                                                        Foreground="White"
+                                                                        Text="{Binding Number}" />
+                                                                </Border>
+                                                            </DataTemplate>
+                                                        </temp:ColorDataTemplateSelector.Blue_DataTemplate>
+                                                        <temp:ColorDataTemplateSelector.Block_DataTemplate>
+                                                            <DataTemplate>
+                                                                <Border
+                                                                    Height="150"
+                                                                    Margin="10"
+                                                                    Background="#252525"
+                                                                    BoxShadow="0 1 1 #000"
+                                                                    DataContext="{Binding #Item.DataContext}">
+                                                                    <TextBlock
+                                                                        HorizontalAlignment="Center"
+                                                                        VerticalAlignment="Center"
+                                                                        FontSize="30"
+                                                                        Foreground="White"
+                                                                        Text="{Binding Number}" />
+                                                                </Border>
+                                                            </DataTemplate>
+                                                        </temp:ColorDataTemplateSelector.Block_DataTemplate>
+                                                    </temp:ColorDataTemplateSelector>
+                                                </ContentControl.ContentTemplate>
+                                            </ContentControl>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
